# MARIO

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE-CC-BY-NC-SA  MANIFEST.in  Pipfile  README.rst  aggregate_IOT.xlsx  aggregate_SUT.xlsx  amintest.py  export_tutorial.ipynb  figaroparser.py  pyproject.toml  requirements.txt  requirements.yml  setup.py  test.py  test.xlsx  test_GTAP.py  test_isard_chenery.ipynb
.venv-pandas3/: pyvenv.cfg
Output/: add_sector_read_only.xlsx  add_sector_read_only_env.xlsx  agg.xlsx  agg_debug.xlsx
calc_ghg_plot/: run.ipynb
doc/: Makefile  docs-requirements.txt  mario-scipy.pptx  notebook_paths.example.yaml  notebooks_converter.py  rtd-requirements.txt  rtd-requirements.txt.txt
mario/: __init__.py  _optional.py  download.py  utils.py  version.py
new_tutorials/: tutorial_add_extensions.ipynb  tutorial_parse_custom_database.ipynb  tutorial_parse_eora.ipynb  tutorial_parse_exiobase_hybrid.ipynb  tutorial_parse_exiobase_monetary.ipynb  tutorial_transformation_isard_to_chenery.ipynb  tutorial_transformation_sut_to_iot.ipynb
scripts/: build_ember_generation_snapshot.py
tests/: _paths.py  realdata.env.example  test_adb_parser.py  test_addsector.py  test_api_reference_docs.py  test_attrdata.py  test_balance.py  test_bea_parser.py  test_ceads_parser.py  test_cepalstat_parser.py  test_compute_catalog.py  test_compute_views.py  test_coremodel.py  test_custom_operators.py  test_database_api.py  test_dataset_model.py  test_download.py  test_emerging_parser.py  test_eora_parser.py  test_ghg.py  (+26 more)
(+821 files in other folders)
